# tz-bag

./: CMakeLists.txt  Console.cpp  Console.h  Fruit.cpp  Fruit.h  FruitBagProvider.cpp  FruitBagProvider.h  README.md  fruits.txt  helper.h  main.cpp
FruitHelper/: FruitHelper.h
Services/: FileFruitService.cpp  FileFruitService.h  IService.h
